--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -12,13 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FarmersMarketApp"
-        tools:targetApi="31">\
+        tools:targetApi="31">
+
         <activity
             android:name=".views.DetailedActivity"
+            android:label="Details"
+            android:parentActivityName=".MainActivity"
             android:exported="false">
+
             <meta-data
                 android:name="android.app.lib_name"
-                android:value="" />
+                android:value="./MainActivity" />
         </activity>
         <activity
             android:name=".MainActivity"
@@ -28,6 +32,21 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".views.SettingsActivity"
+            android:exported="true"
+            android:parentActivityName=".MainActivity"
+            android:label="Settings">
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value=".MainActivity" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+
         </activity>
     </application>
 
