--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.FarmersMarketApp"
         tools:targetApi="31">
         <activity
+            android:name=".UpdateProductActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.ShoppingCartActivity"
             android:exported="false"
             android:label="Shopping Cart"
